- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    Qt Creator 4.10.2, Qt Creator 4.11.1
- 
    None
- 
    Error occur with
 - Qt Creator 4.11.1, Based on Qt 5.14.1, run on Debian GNU/Linux 10.2 (buster)
 - Qt Creator 4.11.1, Based on Qt 5.14.1, run on Windows 10
 - Qt Creator 4.10.2, Based on Qt 5.13.2, run on macOS Sierra (10.12.6)
 
 Works with
 - Qt Creator 4.9.2, Based on Qt 5.12.4, run on Ubuntu 18.04.3
 - Qt Creator 4.5.2, Based on Qt 5.9.5, run on Kubuntu 18.04.4Error occur with - Qt Creator 4.11.1, Based on Qt 5.14.1, run on Debian GNU/Linux 10.2 (buster) - Qt Creator 4.11.1, Based on Qt 5.14.1, run on Windows 10 - Qt Creator 4.10.2, Based on Qt 5.13.2, run on macOS Sierra (10.12.6) Works with - Qt Creator 4.9.2, Based on Qt 5.12.4, run on Ubuntu 18.04.3 - Qt Creator 4.5.2, Based on Qt 5.9.5, run on Kubuntu 18.04.4
- 
        
- 
        63e9c4c31ae3c6529f199c23d9e82fe961bf64c9 (qt-creator/qt-creator/4.11)
Qt Creator hang when insert/delete text for a selected range in column edit mode of the text editor, but only hang if all following cases are true.
- Multiple rows must be selected.
- The last row must be included (can be empty).
- The first column must be included.
- Moving out of the text edit field on the left side when selecting a range using the mouse.
When running the application from command line following error message will be logged.
QTextCursor::setPosition: Position '-1' out of range
Maybe this issue is related to QTBUG-38178.